<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_save_recipe"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_change_recipe_status"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radPrivate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_status_option_private"
            android:checked="true"
            android:drawableEnd="@drawable/ic_lock"
            android:drawableTint="@color/gray_600"/>

        <RadioButton
            android:id="@+id/radPublic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_change_recipe_status_public"
            android:drawableEnd="@drawable/baseline_public_24"
            android:drawableTint="@color/gray_600"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>