<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDialogBookmark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/title_bookmark"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipeListDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:gravity="end|center_vertical">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/btn_cancel"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?colorPrimary"
            android:background="@drawable/background_ripple_rectangle"/>

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/btn_submit"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?colorPrimary"
            android:background="@drawable/background_ripple_rectangle"/>

    </LinearLayout>

</LinearLayout>