<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_otp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="8dp"
                app:cardCornerRadius="4dp">
                <EditText
                    android:id="@+id/edtOtp1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/OtpEditTextStyle"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp">
                <EditText
                    android:id="@+id/edtOtp2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/OtpEditTextStyle"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp">
                <EditText
                    android:id="@+id/edtOtp3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/OtpEditTextStyle"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp">
                <EditText
                    android:id="@+id/edtOtp4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/OtpEditTextStyle"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp">
                <EditText
                    android:id="@+id/edtOtp5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/OtpEditTextStyle"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp">
                <EditText
                    android:id="@+id/edtOtp6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/OtpEditTextStyle"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_otp"/>
            <TextView
                android:id="@+id/tvSendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/btn_send_otp"
                android:textColor="@color/red"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_otp_available"/>
            <TextView
                android:id="@+id/tvOtpCountDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="0"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/unit_seconds"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_button_positive"
            android:minHeight="55dp"
            android:text="@string/btn_submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>