<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".ChangePasswordActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="@drawable/background_ripple_oval"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_forgot_password"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:elevation="16dp"
            app:cardCornerRadius="35dp">
            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/gray_600"
                android:hint="@string/username_input_hint"
                android:inputType="textVisiblePassword"
                android:paddingHorizontal="16dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:elevation="16dp"
            app:cardCornerRadius="35dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edtNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_new_password"
                    android:inputType="textVisiblePassword"
                    android:paddingHorizontal="16dp"/>
                <!--                <ImageView-->
                <!--                    android:id="@+id/imgShowNewPassword"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:paddingEnd="16dp"-->
                <!--                    android:src="@drawable/baseline_visibility_off_24"-->
                <!--                    app:tint="?attr/colorControlNormal"/>-->
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:elevation="16dp"
            app:cardCornerRadius="35dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textVisiblePassword"
                    android:paddingHorizontal="16dp"
                    android:imeOptions="actionDone"/>
                <!--                <ImageView-->
                <!--                    android:id="@+id/imgShowConfirmPassword"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:paddingEnd="16dp"-->
                <!--                    android:src="@drawable/baseline_visibility_off_24"-->
                <!--                    app:tint="?attr/colorControlNormal"/>-->
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_button_positive"
        android:minHeight="55dp"
        android:text="@string/title_change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
